[fix]:fix z-index

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -63,10 +63,11 @@ body {
   position: absolute;
   height: 14em;
   bottom: -1em;
-  z-index: 99;
+  opacity: 0;
 }
-.imgContainer>img{
-  height:100%
+
+.imgContainer>img {
+  height: 100%
 }
 
 .showCardContainer {
